2005-03-16 Marek Safar <marek.safar@seznam.cz>

	* TestRunner.cs: Add support for (no errors, ignore errors).

2005-03-16  Raja R Harinath  <rharinath@novell.com>

	* Makefile (RUNTEST_PL, test-multi-local): Remove, now that
	they're no longer used.
	* runtest.pl: Remove.

2005-03-13  Martin Baulig  <martin@ximian.com>

	Reverted things back to revision 41701, which was the last one
	before Marek's changes.

2004-03-11  Atsushi Enomoto  <atsushi@ximian.com>

	* cs1041.cs : option -doc was missing.

2004-03-10  Atsushi Enomoto  <atsushi@ximian.com>

	* cs1041.cs : added test for bug #73385.

2005-03-10 Marek Safar <marek.safar@seznam.cz>

	* TestRunner.cs: New fast test runner.

2005-03-09  Raja R Harinath  <rharinath@novell.com>

	* cs1618-2.cs: New test for partial classes.

2005-03-07  Raja R Harinath  <rharinath@novell.com>

	* cs0120-6.cs, cs0120-7.cs: New tests from #73394.

2005-02-28  Raja R Harinath  <rharinath@novell.com>

	* cs0053-2.cs: New test from #73052.

2005-02-23  Raja R Harinath  <rharinath@novell.com>

	* cs0122-10.cs, CS0122-10-lib.cs: New tests based on #57851.
	* Makefile (all-local): Add CS0122-10-lib.dll.
	* cs0122-11.cs: New test based on #72718.
	* cs0112-2.cs: Remove erroneous test.  Same as cs1501.cs.
	* mcs-expect-wrong-error (cs1501.cs): Remove.

2005-02-22  Raja R Harinath  <rharinath@novell.com>

	* cs0115-3.c, cs0534-3.cs, cs0534-4.cs: New files based on #71134.
	* CS0534-3-lib.cs, CS0534-4-lib.cs: Likewise.
	* Makefile (all-local): Add CS0534-3-lib.dll and CS0534-4-lib.dll.

2005-02-21  Raja R Harinath  <rharinath@novell.com>

	* cs1594-1.cs, cs1594-2.cs, cs1594-3.cs: New tests based on #68955.

	* runtest.pl: Add unexpected error check.

2005-02-18  Raja R Harinath  <rharinath@novell.com>

	* cs0120-5.cs: New test from #72678.

	* cs0131-3.cs: New test from #63202.

2005-02-16  Raja R Harinath  <rharinath@novell.com>

	* cs0187-1.cs, cs0187-2.cs: New tests from #63202.

2005-02-15  Raja R Harinath  <rharinath@novell.com>
